--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,123 @@ Animation/Assets/model\.dae\.meta
 Animation/Assets/model\.dae
 
 Animation/\.vscode/settings\.json
+
+Animation/Assets/Scene1\.unity
+
+Animation/Assets/Materials\.meta
+
+Animation/Assets/Materials/anchor_and_floor_albedo\.mat
+
+Animation/Assets/Materials/anchor_and_floor_albedo\.mat\.meta
+
+Animation/Assets/Materials/back_window_and_doors_albedo\.mat
+
+Animation/Assets/Materials/back_window_and_doors_albedo\.mat\.meta
+
+Animation/Assets/Materials/barroll_albedo\.mat
+
+Animation/Assets/Materials/barroll_albedo\.mat\.meta
+
+Animation/Assets/Materials/body1_albedo\.mat
+
+Animation/Assets/Materials/body1_albedo\.mat\.meta
+
+Animation/Assets/Materials/body2_albedo\.mat
+
+Animation/Assets/Materials/body2_albedo\.mat\.meta
+
+Animation/Assets/Materials/body3_albedo\.mat
+
+Animation/Assets/Materials/body3_albedo\.mat\.meta
+
+Animation/Assets/Materials/body4_albedo\.mat
+
+Animation/Assets/Materials/body4_albedo\.mat\.meta
+
+Animation/Assets/Materials/body5_albedo\.mat
+
+Animation/Assets/Materials/body5_albedo\.mat\.meta
+
+Animation/Assets/Materials/cannons_albedo\.mat
+
+Animation/Assets/Materials/cannons_albedo\.mat\.meta
+
+Animation/Assets/Materials/crowsnest_albedo\.mat
+
+Animation/Assets/Materials/crowsnest_albedo\.mat\.meta
+
+Animation/Assets/Materials/details1_albedo\.mat
+
+Animation/Assets/Materials/details1_albedo\.mat\.meta
+
+Animation/Assets/Materials/details2_albedo\.mat
+
+Animation/Assets/Materials/details2_albedo\.mat\.meta
+
+Animation/Assets/Materials/Door_and_cracks_albedo\.mat
+
+Animation/Assets/Materials/Door_and_cracks_albedo\.mat\.meta
+
+Animation/Assets/Materials/Flag_albedo\.mat
+
+Animation/Assets/Materials/Flag_albedo\.mat\.meta
+
+Animation/Assets/Materials/lamp1_albedo\.mat
+
+Animation/Assets/Materials/lamp1_albedo\.mat\.meta
+
+Animation/Assets/Materials/lamp2_albedo\.mat
+
+Animation/Assets/Materials/lamp2_albedo\.mat\.meta
+
+Animation/Assets/Materials/railing_and_parts_albedo\.mat
+
+Animation/Assets/Materials/railing_and_parts_albedo\.mat\.meta
+
+Animation/Assets/Materials/RopeLadder_albedo\.mat
+
+Animation/Assets/Materials/RopeLadder_albedo\.mat\.meta
+
+Animation/Assets/Materials/sailmass3_albedo\.mat
+
+Animation/Assets/Materials/sailmass3_albedo\.mat\.meta
+
+Animation/Assets/Materials/Sailmass4_albedo\.mat
+
+Animation/Assets/Materials/Sailmass4_albedo\.mat\.meta
+
+Animation/Assets/Materials/Sailmass5_albedo\.mat
+
+Animation/Assets/Materials/Sailmass5_albedo\.mat\.meta
+
+Animation/Assets/Materials/Sails1_albedo\.mat
+
+Animation/Assets/Materials/Sails1_albedo\.mat\.meta
+
+Animation/Assets/Materials/Sails2_albedo\.mat
+
+Animation/Assets/Materials/Sails2_albedo\.mat\.meta
+
+Animation/Assets/Materials/Sails3_albedo\.mat
+
+Animation/Assets/Materials/Sails3_albedo\.mat\.meta
+
+Animation/Assets/Materials/Stairs1_albedo\.mat
+
+Animation/Assets/Materials/Stairs1_albedo\.mat\.meta
+
+Animation/Assets/Materials/Stairs2_albedo\.mat
+
+Animation/Assets/Materials/Stairs2_albedo\.mat\.meta
+
+Animation/Assets/Materials/Stairs3_albedo\.mat
+
+Animation/Assets/Materials/Stairs3_albedo\.mat\.meta
+
+Animation/Assets/Materials/Stairs4_and_Door_albedo\.mat
+
+Animation/Assets/Materials/Stairs4_and_Door_albedo\.mat\.meta
+
+Animation/Assets/Materials/Steering_wheel_albedo\.mat
+
+Animation/Assets/Materials/Steering_wheel_albedo\.mat\.meta
